# Qy6-Calculator

./: README.md
src/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
